platform/base/robotics-playground-backend/route-rerun-grpc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: robotics-playground-rerun-grpc
  namespace: physical-ai
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: robotics-playground
  port:
    targetPort: rerun-grpc
