platform/base/robotics-playground-backend/route-rerun-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: robotics-playground-rerun-web
  namespace: physical-ai
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: robotics-playground
  port:
    targetPort: rerun-web
