platform/base/robotics-playground-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: robotics-playground-api
  namespace: physical-ai
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: robotics-playground
